Prevent content overflow for game-setup and scores
If the user made the window too small the game-setup and game-scores
divs could overflow onto the current view.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ body {
   height: 100vh;
   width: 100%;
   position: absolute;
+  overflow-x: hidden;
   background: #000;
   color: #fff;
   transform: translateX(-100%);
@@ -311,6 +312,7 @@ body {
   /* display: none; */
   height: 100vh;
   width: 100%;
+  overflow-x: hidden;
   background: #000;
   color:#fff;
   text-align: center;
